create a wcf connection between client and service

--- a/Servis/App.config
+++ b/Servis/App.config
@@ -4,4 +4,16 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	
+	<system.serviceModel>
+		<services>
+			<service name="Servis.Service">
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.tcp://localhost:4000/" />
+					</baseAddresses>
+				</host>
+				<endpoint address="Service" binding="netTcpBinding" contract="Common.IService" />
+			</service>
+		</services>
+	</system.serviceModel>
 </configuration>
