add keys in app.config for formula & in use database

--- a/Servis/App.config
+++ b/Servis/App.config
@@ -3,7 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-	
+	<appSettings>
+		<add key="formula" value="q" /> <!-- 'q' quadric, 'a' absolute -->
+		<add key="baza" value="x" /> <!-- "i" in memory, 'x' xml -->
+	</appSettings>
 	<system.serviceModel>
 		<services>
 			<service name="Servis.Service">
